--- a/index.html
+++ b/index.html
@@ -67,41 +67,72 @@
     <span></span> </label>
 </header>
 <main class="center">
-  <section class="section-with-phone">
-    <h1 class="section-with-phone__title">
-      Cвязь с клиентом в один клик!
-    </h1>
-    <p class="section-with-phone__desc">
-      Перейдя по ссылке ваш клиент получит быстро и расширено информацию по всем
-      вопросам.
-    </p>
-    <a href="#" class="button"> Создать страницу бесплатно </a>
-    <img class="section-with-phone__phone" src="img/samsungs-s10.svg"
-         alt="samsungs-s10">
-  </section>
-  <section class="section-with-phone">
-    <h2 class="section-with-phone__subtitle">
-      Мессенджеры
-    </h2>
-    <p class="section-with-phone__desc">
-      Добавьте любимые мессенджеры ваших клиентов, и они смогут связаться с вами
-      в один клик!
-    </p>
-    <img class="section-with-phone__phone" src="img/samsungs-s10-2.svg"
-         alt="samsungs-s10">
-  </section>
-  <section class="section-with-phone">
-    <h2 class="section-with-phone__subtitle">
-      Услуги
-    </h2>
-    <p class="section-with-phone__desc">
-      Выполняете много услуг? Отлично! Добавьте их на вашу страницу, и клиенты
-      легко и просто найдут нужную информацию.
-    </p>
-    <img class="section-with-phone__phone" src="img/samsungs-s10-3.svg"
-         alt="samsungs-s10">
-  </section>
+  <div class="before-section-tablet">
+    <section class="section-with-phone section-with-tablet-group">
+        <div class="section-with-tablet__item">
+          <h1 class="section-with-phone__title">
+            Cвязь с клиентом в один клик!
+          </h1>
+          <p class="section-with-phone__desc">
+            Перейдя по ссылке ваш клиент получит быстро и расширено информацию по всем
+            вопросам.
+          </p>
+          <a href="#" class="button"> Создать страницу бесплатно </a>
+        </div>
+        <div class="section-with-tablet__item">
+          <img class="section-with-phone__phone" src="img/samsungs-s10.svg"
+               alt="samsungs-s10">
+      </div>
+    </section>
+    <section class="section-with-phone section-with-tablet-group">
+        <div class="section-with-tablet__item">
+          <h2 class="section-with-phone__subtitle">
+            Мессенджеры
+          </h2>
+          <p class="section-with-phone__desc">
+            Добавьте любимые мессенджеры ваших клиентов, и они смогут связаться с вами
+            в один клик!
+          </p>
+        </div>
+        <div class="section-with-tablet__item">
+          <img class="section-with-phone__phone" src="img/samsungs-s10-2.svg"
+               alt="samsungs-s10">
+        </div>
+    </section>
+    <section class="section-with-phone section-with-tablet-group">
+        <div class="section-with-tablet__item">
+          <h2 class="section-with-phone__subtitle">
+            Услуги
+          </h2>
+          <p class="section-with-phone__desc">
+            Выполняете много услуг? Отлично! Добавьте их на вашу страницу, и клиенты
+            легко и просто найдут нужную информацию.
+          </p>
+        </div>
+        <div class="section-with-tablet__item">
+        <img class="section-with-phone__phone" src="img/samsungs-s10-3.svg"
+             alt="samsungs-s10">
+        </div>
+    </section>
+  </div>
 </main>
-<footer class="footer center"></footer>
+<footer class="footer center">
+  <div class="footer__list">
+    <ul class="footer__list">
+      <li class="footer__item">
+        <a href="#" class="footer__link">О компании</a></li>
+      <li class="footer__item">
+        <a href="#" class="footer__link">Цены и тарифы</a></li>
+      <li class="footer__item">
+        <a href="#" class="footer__link">Договор-оферта</a></li>
+      <li class="footer__item">
+        <a href="#" class="footer__link">Политика конфиденциальности</a></li>
+    </ul>
+    <div class="footer__logo">
+      <img src="img/footer_logo_link.png" alt="footer_logo_link">
+      <img src="img/footer_logo.png" alt="footer_logo">
+    </div>
+  </div>
+</footer>
 </body>
 </html>
